gcc/testsuite/rust/rustc/ui/error-codes/E0428.rs
struct Bar; // { dg-error "" "" { target *-*-* } }
struct Bar; // { dg-error ".E0428." "" { target *-*-* } }

fn main () {
}

